# kraft

./: .gitignore  SConstruct  readme.txt
org/vs2012/: kraft.sln  outputpaths.props
org/vs2012/kqKlarity/: kqKlarity.vcxproj  kqKlarity.vcxproj.filters
org/vs2012/kq_core/: kq_core.vcxproj  kq_core.vcxproj.filters  warnings.props
projects/dos/org/: CMakeLists.txt
projects/dos/src/: dos_client.cpp  globals.cpp  globals.hpp  layout.hpp
projects/dos/src/oops/: Exception.cpp  Exception.hpp
projects/dos/src/system/: Engine.cpp  Engine.hpp  ITimer.cpp  ITimer.hpp  IWindowManager.cpp  IWindowManager.hpp
projects/dos/src/system/X/: XWindows.cpp  XWindows.hpp
projects/dos/src/system/os/: LinuxTimer.cpp  LinuxTimer.hpp
projects/dos/src/utils/: DynamicVariables.cpp  DynamicVariables.hpp  IVideoConverters.cpp  IVideoGrabber.cpp  IVideoGrabber.hpp  TreeNode.hpp  VideoGrabber.cpp  VideoGrabber.hpp  VideoGrabberV1.cpp  VideoGrabberV1.hpp  logger.cpp  logger.hpp
projects/dos/src/utils/comm/: IPipe.cpp  IPipe.hpp  Pipe.cpp  Pipe.hpp
projects/dos/src/world/: IWorld.hpp  TriangleWorld.cpp  TriangleWorld.hpp
projects/kq/: From Work.cpp  IntegerTypes.h  PooledMemoryAllocator.h  StandardLibraryMemoryAllocator.cpp  StandardLibraryMemoryAllocator.h  Worker.h  main.cpp  oops.h
projects/kq/code/cxx/: core_IntegerTypes.hpp  core_data.hpp  core_data_BPlusTree.cpp  core_data_BPlusTree.hpp  core_data_IDMap.hpp  core_flow.cpp  core_flow.hpp  core_konnect.hpp  core_memory_PooledMemoryAllocator.hpp  core_memory_RefCounter.hpp  core_oops.cpp  core_oops.hpp  core_resource_Resourcer.hpp  core_threading.cpp  core_threading.hpp  kom.cpp  kom.hpp  kqCopyProtect.cpp  kqExperiments.cpp  kqKlarity.cpp  kqKlarity_Capture.cpp  kqKlarity_Capture.hpp  ui_UserInterface.cpp
projects/kq/code/java/kq/: Stock.java
projects/kq/code/java/kq/flows/daemon/: Configuration.java  ControlPanel.java  Daemon.java
projects/kq/code/java/kq/flows/daemon/controlpanel/: ControlPanel.java  ControlPanelOld.java
projects/kq/code/java/kq/flows/daemon/controlpanel/panels/: BasePanel.java  Configuration.java  DaemonStatus.java  NetworkAddress.java
projects/kq/code/java/kq/flows/daemon/controlpanel/treenodes/: BaseTreeNode.java  Configuration.java  DaemonStatus.java  NetworkAddress.java
projects/kq/code/java/kq/net/: NetworkManager.java
projects/kq/code/java/kq/web/: IHTTPResourceCache.java  ZipHttpResourceCache.java
projects/kq/code/source/: From Work.cpp  MemoryWorker.hpp  PooledMemoryAllocator.cpp  PooledMemoryAllocator.hpp  StandardLibraryMemoryAllocator.cpp  StandardLibraryMemoryAllocator.hpp  core.hpp  core_Worker.hpp  core_data_BPlusTree.cpp  core_data_BPlusTree.hpp  core_flow.hpp  core_konnect.hpp  core_memory.hpp  core_memory_MemoryWorker.hpp  core_memory_PooledMemoryAllocator.cpp  core_memory_PooledMemoryAllocator.hpp  core_memory_RefCounter.cpp  core_memory_RefCounter.hpp  core_memory_StandardLibraryMemoryAllocator.cpp  core_memory_StandardLibraryMemoryAllocator.hpp  core_oops.cpp  core_oops.hpp  core_threading.hpp  flows.hpp  flows_konnect.hpp  kqExperiments.cpp  kqKlarity.cpp  main.cpp  main_other.cpp  memory.hpp  oops.hpp  ui.hpp  ui_UserInterface.cpp  ui_UserInterface.hpp  ui_X_UserInterface.cpp
projects/kq/code/source/core/: IntegerTypes.hpp  Worker.hpp  memory.hpp  oops.hpp
projects/kq/code/source/core/memory/: MemoryWorker.hpp  PooledMemoryAllocator.cpp  PooledMemoryAllocator.hpp  StandardLibraryMemoryAllocator.hpp
projects/kq/code/source/core/oops/: OutOfMemoryException.hpp
projects/kq/code/source/kq/: Portfolio.java  Stock.java
projects/kq/code/source/kq/web/: Base64Coder.java
projects/kq/org/: CMakeLists.txt
projects/kq/org/copyprotect/: CMakeLists.txt
projects/kq/org/experiments/: CMakeLists.txt
projects/kq/org/libKQCore/: CMakeLists.txt
projects/trunk/kq/code/source/: core_IntegerTypes.hpp  core_memory.hpp  core_memory_MemoryWorker.hpp  core_memory_PooledMemoryAllocator.cpp  core_memory_RefCounter.hpp  core_memory_StandardLibraryMemoryAllocator.hpp  core_oops_OutOfMemoryException.hpp  kqCopyProtect.cpp  kqKlarity.cpp  main_other.cpp  ui_UserInterface.hpp  ui_X_UserInterface.hpp
projects/trunk/kq/org/: CMakeLists.txt
projects/trunk/kq/org/klarity/: CMakeLists.txt
